--- a/2023teamstats.html
+++ b/2023teamstats.html
@@ -516,8 +516,525 @@
 </TR>
 </TABLE>
 </BODY>
-</HTML>
+
+ 
+<br>
+                                           <br>
+                                           <br>
+                                           <br>
+                                              <h1><strong> Individual Batting </strong> </h1>   
+                                           
  
 
+<P ALIGN=LEFT>Players sorted by At Bats - Descending</P>
+<TABLE CELLSPACING=2 CELLPADDING=2>
+<TR>
+<TD ALIGN=LEFT><U>20 Players</U></TD>
+<TD ALIGN=LEFT><U>Tm</U></TD>
+<TD ALIGN=LEFT><U>Lg</U></TD>
+<TD ALIGN=RIGHT><U>AVG</U></TD>
+<TD ALIGN=RIGHT><U>G</U></TD>
+<TD ALIGN=RIGHT><U>AB</U></TD>
+<TD ALIGN=RIGHT><U>R</U></TD>
+<TD ALIGN=RIGHT><U>H</U></TD>
+<TD ALIGN=RIGHT><U>2B</U></TD>
+<TD ALIGN=RIGHT><U>3B</U></TD>
+<TD ALIGN=RIGHT><U>HR</U></TD>
+<TD ALIGN=RIGHT><U>TB</U></TD>
+<TD ALIGN=RIGHT><U>RBI</U></TD>
+<TD ALIGN=RIGHT><U>SO</U></TD>
+<TD ALIGN=RIGHT><U>BB</U></TD>
+<TD ALIGN=RIGHT><U>ASB</U></TD>
+<TD ALIGN=RIGHT><U>SB</U></TD>
+<TD ALIGN=RIGHT><U>CS</U></TD>
+<TD ALIGN=RIGHT><U>SBP</U></TD>
+<TD ALIGN=RIGHT><U>GDP</U></TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>ROSARIO, A.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .222</TD>
+<TD ALIGN=RIGHT>49</TD>
+<TD ALIGN=RIGHT>198</TD>
+<TD ALIGN=RIGHT>17</TD>
+<TD ALIGN=RIGHT>44</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>72</TD>
+<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT>48</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>66.7</TD>
+<TD ALIGN=RIGHT>3</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>JUDGE, A.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .341</TD>
+<TD ALIGN=RIGHT>50</TD>
+<TD ALIGN=RIGHT>176</TD>
+<TD ALIGN=RIGHT>47</TD>
+<TD ALIGN=RIGHT>60</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>147</TD>
+<TD ALIGN=RIGHT>40</TD>
+<TD ALIGN=RIGHT>55</TD>
+<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>100.0</TD>
+<TD ALIGN=RIGHT>1</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>GURRIEL, Y.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .232</TD>
+<TD ALIGN=RIGHT>47</TD>
+<TD ALIGN=RIGHT>164</TD>
+<TD ALIGN=RIGHT>14</TD>
+<TD ALIGN=RIGHT>38</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>60</TD>
+<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT>33</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>100.0</TD>
+<TD ALIGN=RIGHT>4</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>WISDOM, P.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .294</TD>
+<TD ALIGN=RIGHT>41</TD>
+<TD ALIGN=RIGHT>153</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT>45</TD>
+<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>87</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT>50</TD>
+<TD ALIGN=RIGHT>11</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>100.0</TD>
+<TD ALIGN=RIGHT>3</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>TURNER, J.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .242</TD>
+<TD ALIGN=RIGHT>38</TD>
+<TD ALIGN=RIGHT>153</TD>
+<TD ALIGN=RIGHT>26</TD>
+<TD ALIGN=RIGHT>37</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>73</TD>
+<TD ALIGN=RIGHT>21</TD>
+<TD ALIGN=RIGHT>35</TD>
+<TD ALIGN=RIGHT>15</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>4</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>BELLINGER, C.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .219</TD>
+<TD ALIGN=RIGHT>43</TD>
+<TD ALIGN=RIGHT>151</TD>
+<TD ALIGN=RIGHT>15</TD>
+<TD ALIGN=RIGHT>33</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>67</TD>
+<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT>41</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>85.7</TD>
+<TD ALIGN=RIGHT>1</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>RENFROE, H.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .200</TD>
+<TD ALIGN=RIGHT>39</TD>
+<TD ALIGN=RIGHT>150</TD>
+<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT>30</TD>
+<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>58</TD>
+<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT>36</TD>
+<TD ALIGN=RIGHT>11</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>2</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>STORY, T.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .185</TD>
+<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>108</TD>
+<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>20</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>43</TD>
+<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT>41</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>100.0</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>TAYLOR, T.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .286</TD>
+<TD ALIGN=RIGHT>33</TD>
+<TD ALIGN=RIGHT>105</TD>
+<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>30</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>59</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT>26</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>100.0</TD>
+<TD ALIGN=RIGHT>2</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>NOLA, A.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .240</TD>
+<TD ALIGN=RIGHT>34</TD>
+<TD ALIGN=RIGHT>104</TD>
+<TD ALIGN=RIGHT>11</TD>
+<TD ALIGN=RIGHT>25</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>32</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>1</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>INDIA, J.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .219</TD>
+<TD ALIGN=RIGHT>22</TD>
+<TD ALIGN=RIGHT>73</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>31</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>25</TD>
+<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>1</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>SERVEN, B.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .100</TD>
+<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT>60</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>19</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>1</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>BROSSEAU, M.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>FARM</TD>
+<TD ALIGN=RIGHT> .242</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>33</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>15</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>11</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>2</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>BOLT, S.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>FARM</TD>
+<TD ALIGN=RIGHT> .290</TD>
+<TD ALIGN=RIGHT>14</TD>
+<TD ALIGN=RIGHT>31</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>15</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>100.0</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>ALCANTARA, S.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>RCL</TD>
+<TD ALIGN=RIGHT> .111</TD>
+<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>WILLIAMS, L.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>FARM</TD>
+<TD ALIGN=RIGHT> .056</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>18</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>100.0</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>BOTE, D.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>FARM</TD>
+<TD ALIGN=RIGHT> .250</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>RIOS, E.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>FARM</TD>
+<TD ALIGN=RIGHT> .308</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>STUBBS, G.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>FARM</TD>
+<TD ALIGN=RIGHT> .231</TD>
+<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>JONES, N.</TD>
+<TD ALIGN=LEFT>PO</TD>
+<TD ALIGN=LEFT>FARM</TD>
+<TD ALIGN=RIGHT> .333</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>-</TD>
+<TD ALIGN=RIGHT>0</TD>
+</TR>
+<TR>
+<TD ALIGN=LEFT>PEND OREILLE Wampus Cats</TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=RIGHT> .238</TD>
+<TD ALIGN=RIGHT>503</TD>
+<TD ALIGN=RIGHT>1749</TD>
+<TD ALIGN=RIGHT>236</TD>
+<TD ALIGN=RIGHT>417</TD>
+<TD ALIGN=RIGHT>105</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>88</TD>
+<TD ALIGN=RIGHT>800</TD>
+<TD ALIGN=RIGHT>231</TD>
+<TD ALIGN=RIGHT>486</TD>
+<TD ALIGN=RIGHT>150</TD>
+<TD ALIGN=RIGHT>26</TD>
+<TD ALIGN=RIGHT>24</TD>
+<TD ALIGN=RIGHT>2</TD>
+<TD ALIGN=RIGHT>92.3</TD>
+<TD ALIGN=RIGHT>25</TD>
+</TR>
+</TABLE>
+<TABLE CELLSPACING=2 CELLPADDING=2>
+<TR>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=LEFT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+<TD ALIGN=RIGHT> </TD>
+</TR>
+</Table>                                          
+                                           
   </body>
 </html>
