--- a/2022teampitchingstats.html
+++ b/2022teampitchingstats.html
@@ -726,61 +726,61 @@
     <h2><strong><center>Relief Pitchers</center></strong></h2>
     <hr>
 
-    <h3><strong>Adam Ottavino</strong></h3>
+    <h3><strong>Diego Castillo </strong></h3>
 
 
     <table>
     <tr>
-      <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/1/188f2e67_mlbam.jpg" alt=""></td>
+      <td><img src="https://www.baseball-reference.com/req/202305180/images/headshots/9/9cde3f63_mlbam.jpg" alt=""></td>
       <td>
 
-        <div class="sr_share_wrap" style="overflow:auto">
-        <table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
-            <caption>Standard Pitching</caption>
-           <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
-           <thead>
-              <tr>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">L</th>
-                 <th scope="col" data-filter="1" data-name="Win-Loss %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W-L%</th>
-                 <th scope="col" data-filter="1" data-name="Earned Run Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GS</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GF</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CG</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SHO</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SV</th>
-                 <th scope="col" data-filter="1" data-name="Innings Pitched" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IP</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ER</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BK</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WP</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BF</th>
-                 <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA+</th>
-                 <th scope="col" data-filter="1" data-name="Fielding Independent Pitching" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">FIP</th>
-                 <th scope="col" data-filter="1" data-name="Walks &amp; Hits per IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WHIP</th>
-                 <th scope="col" data-filter="1" data-name="Hits per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H9</th>
-                 <th scope="col" data-filter="1" data-name="Home Runs per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR9</th>
-                 <th scope="col" data-filter="1" data-name="Bases On Balls per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB9</th>
-                 <th scope="col" data-filter="1" data-name="Strikeouts per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO9</th>
-                 <th scope="col" data-filter="1" data-name="Strikeouts / Base On Balls" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO/W</th>
-              </tr>
-              </thead>
-        <tbody>
-        <tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">36</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/NYM/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="New York Mets">NYM</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/NL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">NL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.667</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.06</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">66</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">19</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">65.2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">48</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">15</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">15</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">16</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">79</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">258</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">188</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.85</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.975</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6.6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">10.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4.94</td></tr>
-        </tbody><tfoot>
-           </tfoot>
-        </table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/o/ottavad01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 12/20/2022.</div>
+      <div class="sr_share_wrap" style="overflow:auto">
+<table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
+    <caption>Standard Pitching</caption>
+   <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
+   <thead>
+      <tr>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">L</th>
+         <th scope="col" data-filter="1" data-name="Win-Loss %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W-L%</th>
+         <th scope="col" data-filter="1" data-name="Earned Run Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GS</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CG</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SHO</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SV</th>
+         <th scope="col" data-filter="1" data-name="Innings Pitched" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ER</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BK</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA+</th>
+         <th scope="col" data-filter="1" data-name="Fielding Independent Pitching" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">FIP</th>
+         <th scope="col" data-filter="1" data-name="Walks &amp; Hits per IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WHIP</th>
+         <th scope="col" data-filter="1" data-name="Hits per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H9</th>
+         <th scope="col" data-filter="1" data-name="Home Runs per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR9</th>
+         <th scope="col" data-filter="1" data-name="Bases On Balls per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB9</th>
+         <th scope="col" data-filter="1" data-name="Strikeouts per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO9</th>
+         <th scope="col" data-filter="1" data-name="Strikeouts / Base On Balls" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO/W</th>
+      </tr>
+      </thead>
+<tbody>
+<tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">28</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/SEA/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="Seattle Mariners">SEA</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/AL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">AL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.700</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.64</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">59</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">23</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">54.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">40</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">27</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">22</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">22</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">53</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">222</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">102</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.68</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.141</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6.6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">8.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.41</td></tr>
+</tbody><tfoot>
+   </tfoot>
+</table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/c/castidi01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 6/14/2023.</div>
 
     </td>
     </tr>
